--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,28 @@
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Python cache
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+
+# Virtual environments
+venv/
+env/
+ENV/
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
 ### AL ###
 #Template for AL projects for Dynamics 365 Business Central
 #launch.json folder
